# OmniWorld

./: .gitignore  README.md  pyproject.toml
scripts/: check_installation.py  init.sh
